--- a/app/src/main/res/layout/activity_activity.xml
+++ b/app/src/main/res/layout/activity_activity.xml
@@ -6,13 +6,21 @@
     android:layout_height="match_parent"
     tools:context=".ActivityA">
 
+
+
     <TextView
         android:id="@+id/Welcome_to_ALC_4.0"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="135dp"
+        android:layout_height="18dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:text="Welcome to ALC 4.0"
-        tools:layout_editor_absoluteX="129dp"
-        tools:layout_editor_absoluteY="8dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/ABOUT_ALC"
